syntax = "proto3";
package ncs.service.backpack.user.v1;
option go_package = "backend/app/service/backpack/user/api/grpc/v1";

import "google/api/annotations.proto";

message Item {
    int32 id = 1;
    int32 amount = 2;
    int64 expr_time = 3;
    int64 length = 4;
}

message GetItemsReq {
    int64 uid = 1;
}

message GetItemsResp {
    int64 uid = 1;
    repeated Item items = 2;
}

message AddItemsReq {
    int64 uid = 1;
    repeated Item items = 2;
}

message AddItemsResp {
}

message RemoveItemReq {
    int64 uid = 1;
    Item item = 2;
    bool all = 3;
}

message RemoveItemResp {
}

message InitReq {
    int64 uid = 1;
}

message InitResp {
}

message HaveItemReq {
    int64 uid = 1;
    int32 id = 2;
}

message HaveItemResp {
    bool have = 1;
}

message AddAllItemsReq {
    int64 uid = 1;
}

message AddAllItemsResp {
}

service User {
    rpc Init (InitReq) returns (InitResp);
    rpc GetItems (GetItemsReq) returns (GetItemsResp) {
        option (google.api.http) = {
            get: "/backpack/user/{uid}"
        };
    }
    rpc AddItems (AddItemsReq) returns (AddItemsResp) {
        option (google.api.http) = {
            post: "/backpack/user/additem"
            body: "*"
        };
    }
    rpc RemoveItem (RemoveItemReq) returns (RemoveItemResp);
    rpc HaveItem (HaveItemReq) returns (HaveItemResp) {
        option (google.api.http) = {
            get: "/backpack/user/have/{uid}/{id}"
        };
    }
    rpc AddAllItems (AddAllItemsReq) returns (AddAllItemsResp) {
        option (google.api.http) = {
            post: "/backpack/user/allitems"
            body: "*"
        };
    }
}


